<resources>
    <string name="app_name">Enigma</string>
    <string name="str_action_settings">設置</string>
    <string name="str_folder">分類夾</string>
    <string name="str_vocabulary">單字</string>
    <string name="str_close">關閉</string>
    <string name="str_go_up">往上</string>
    <string name="str_go_down">往下</string>
    <string name="str_new_folder">新分類夾</string>
    <string name="str_new_vocabulary">新單字</string>
    <string name="str_edit">編輯</string>
    <string name="str_delete">刪除</string>
    <string name="str_bnav_item_vocabulary_list">單字</string>
    <string name="str_bnav_item_practice">練習</string>
    <string name="str_bnav_item_more">更多</string>
    <string name="str_attention_of_maximum_new_items_prefix">一次最多只能新增&#160;</string>
    <string name="str_attention_of_maximum_new_items_suffix">&#160;個</string>
    <string name="str_attention_of_removing_item_card">確定要刪除嗎？</string>
    <string name="str_attention_of_invalid_null_input">不可以留白</string>
    <string name="str_attention_of_invalid_same_folder_name_at_same_location">在同一層已有相同名稱的分類夾</string>
    <string name="str_attention_of_invalid_same_vocabulary">已存在相同的單字</string>
    <string name="str_attention_of_invalid_duplicated_new_folders">欲新增的所有分類夾中有名稱重複的情況</string>
    <string name="str_attention_of_invalid_duplicated_new_vocabularies">欲新增的所有單字中有名字重複的情況</string>
    <string name="str_attention_of_removing_item_dialog_title_prefix">確定要永久刪除這個</string>
    <string name="str_attention_of_removing_item_dialog_title_suffix">&#160;嗎？</string>
    <string name="str_attention_of_removing_item_dialog_message">此動作將無法復原。</string>
    <string name="str_attention_of_there_s_nothing_in_this_folder">這個分類夾裡面還沒有任何東西</string>
    <string name="str_attention_of_renaming_folder_item_dialog_title">原分類名：</string>
    <string name="str_attention_of_renaming_folder_item_dialog_edit_text_hint">在這裡輸入新的分類夾名稱</string>
    <string name="str_attention_of_renamed_folder_no_change">分類夾名稱沒有變化</string>
    <string name="str_attention_of_picking_a_path_prefix">請選取一個路徑然後按下「</string>
    <string name="str_attention_of_picking_a_path_suffix">」鍵</string>
    <string name="str_cancel">取消</string>
    <string name="str_submit">送出</string>
    <string name="str_confirm">確定</string>
    <string name="str_ok">好</string>
    <string name="str_add_more">再加一個</string>
    <string name="str_base_item_card_path_field">位置</string>
    <string name="str_folder_item_card_folder_name_field">分類夾名稱</string>
    <string name="str_vocabulary_item_card_english_field">單字</string>
    <string name="str_vocabulary_item_card_meaning_field">意義</string>
    <string name="str_vocabulary_item_card_proficiency_field">熟練度</string>
    <string name="str_vocabulary_item_card_remark_field">備註</string>
    <string name="str_vocabulary_item_card_tags_field">標籤</string>
    <string name="str_base_item_summary_item_type">類型：</string>
    <string name="str_base_item_summary_path">位置：</string>
    <string name="str_base_item_summary_create_time">建立於：</string>
    <string name="str_folder_item_summary_num_of_folders_prefix">內有&#160;</string>
    <string name="str_folder_item_summary_num_of_folders_suffix">&#160;個分類夾</string>
    <string name="str_folder_item_summary_num_of_vocabularies_prefix">，以及&#160;</string>
    <string name="str_folder_item_summary_num_of_vocabularies_suffix">&#160;個單字</string>
    <string name="str_vocabulary_item_summary_num_of_tags_prefix">並被加上了&#160;</string>
    <string name="str_vocabulary_item_summary_num_of_tags_suffix">&#160;個標籤：</string>
    <string name="str_vocabulary_item_summary_num_of_meanings_prefix">共有&#160;</string>
    <string name="str_vocabulary_item_summary_num_of_meanings_suffix">&#160;個意思：</string>
    <string name="str_vocabulary_item_card_english_field_edit_text_hint">欲新增的單字</string>
    <string name="str_vocabulary_item_card_remark_field_edit_text_hint">注意事項、同義詞、反義詞、詳細的用法，或任何你想要補充的</string>
    <string name="str_noun_abbreviation">n</string>
    <string name="str_what_does_it_mean">是什麼意思呢？</string>
    <string name="str_new_example_sentence">新增例句</string>
    <string name="str_notes">補充</string>
    <string name="str_select_a_part_of_speech">請選擇詞性</string>
    <string name="str_enter_new_sentence_hint">在此輸入例句</string>
    <string name="str_example_sentence_label_at_sentence_view">例句：</string>
    <string name="str_new_meaning_setting_view">新增意義</string>
    <string name="str_folder_item_list_dialog_enter">進入分類</string>
    <string name="str_folder_item_list_dialog_summary">分類摘要</string>
    <string name="str_folder_item_list_dialog_rename">重新命名</string>
    <string name="str_folder_item_list_dialog_move">移動分類</string>
    <string name="str_folder_item_list_dialog_delete">刪除分類</string>
    <string name="str_vocabulary_item_master_list_dialog_details">詳細內容</string>
    <string name="str_vocabulary_item_master_list_dialog_summary">單字摘要</string>
    <string name="str_vocabulary_item_master_list_dialog_edit">編輯單字</string>
    <string name="str_vocabulary_item_master_list_dialog_move">移動單字</string>
    <string name="str_vocabulary_item_master_list_dialog_delete">刪除單字</string>
    <string name="str_toast_add_vocabularies_prefix" />
    <string name="str_toast_add_vocabularies_suffix">&#160;個單字新增成功</string>
    <string name="str_toast_add_folders_prefix" />
    <string name="str_toast_add_folders_suffix">&#160;個分類夾新增成功</string>
    <string name="str_toast_edit_vocabulary_prefix">單字&#160;</string>
    <string name="str_toast_edit_vocabulary_suffix">&#160;編輯成功</string>
    <string name="str_toast_remove_item_prefix" />
    <string name="str_toast_remove_item_suffix">&#160;刪除成功</string>
    <string name="str_toast_rename_folder_item">重新命名成功</string>
    <string name="str_toast_move_item_successfully">移動成功</string>
    <string name="str_toast_move_item_failed_due_to_no_change_on_path">移動失敗，選取的路徑即為原路徑</string>
    <string name="str_toast_move_item_failed_due_to_same_folder_name_exists">移動失敗，選取的路徑中已含有同名的分類夾</string>
    <string name="str_toast_move_item_failed_due_to_recursion">移動失敗，選取的路徑不可以在欲移動的分類夾內</string>
</resources>